# ChangeLog for catalyst
# Copyright 2002-2009 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
# Distributed under the GPL v2

  04 Apr 2009; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/chroot-functions.sh:
  Apply patch from gentoo bug #264457 to prevent deleting of ccache cache

  24 Feb 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/arch/sh.py:
  Additional sh patch from gentoo bug #255793

  21 Feb 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/arch/arm.py, modules/catalyst/arch/sh.py:
  Apply modified patch from gentoo bug #255793 for enhanced sh/arm support

  30 Jan 2009; Andrew Gaffney <agaffney@gentoo.org> TODO:
  Add note to TODO about enhanced catalystrc support

  21 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/generic_stage.py:
  Update reference to make.conf.example for new location in portage-2.1.6

  20 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  targets/stage1/stage1-chroot.sh:
  Remove --noreplace from run_merge call so that baselayout gets rebuilt
  with USE=build

  16 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/rc-update.sh:
  Change invalid atom '>=sys-apps/baselayout-2*' to
  '>=sys-apps/baselayout-2'

  14 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/embedded.py, modules/catalyst/target/generic.py,
  modules/catalyst/target/generic_stage.py, modules/catalyst/target/grp.py,
  modules/catalyst/target/netboot.py, modules/catalyst/target/tinderbox.py:
  Add run_controller_action() function and replace manual calls to
  controller file

  14 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/spawn.py, targets/system/system-controller.sh:
  Add clean no-op for system target

  14 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/arch/alpha.py, modules/catalyst/arch/amd64.py,
  modules/catalyst/arch/arm.py, modules/catalyst/arch/hppa.py,